[FIX] rpCombobox: Prevent wordwrap in suggestions

--- a/src/less/ripple/combobox.less
+++ b/src/less/ripple/combobox.less
@@ -33,6 +33,7 @@
       padding: 5px;
       .rounded(5px);
       cursor: default;
+      white-space: nowrap;
 
       .additional {
         display: block;
